Use cmake_policy instead of minimum
Policy correctly scopes the changes to the Config file, rather than
applying the change to the rest of the user's code when called from
inside `find_package` or `find_dependency`.

--- a/cmake/Templates/PTLConfig.cmake.in
+++ b/cmake/Templates/PTLConfig.cmake.in
@@ -3,7 +3,8 @@
 #
 @PACKAGE_INIT@
 
-cmake_minimum_required(VERSION 3.8...3.27)
+cmake_policy(PUSH)
+cmake_policy(VERSION 3.0.0...3.27)
 
 # -------------------------------------------------------------------------------------- #
 # basic paths
@@ -78,3 +79,5 @@ if(NOT TARGET PTL::ptl)
         target_compile_definitions(PTL::ptl INTERFACE _PTL_ARCHIVE)
     endif()
 endif()
+
+cmake_policy(POP)
