--- a/cmake/Templates/PTLConfig.cmake.in
+++ b/cmake/Templates/PTLConfig.cmake.in
@@ -1,10 +1,18 @@
+# cmake/Templates/PTLConfig.cmake.in
 # -------------------------------------------------------------------------------------- #
+
+if("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" LESS 2.8)
+   message(FATAL_ERROR "CMake >= 3.0.0 required")
+endif()
+if(CMAKE_VERSION VERSION_LESS "3.0.0")
+   message(FATAL_ERROR "CMake >= 3.0.0 required")
+endif()
+cmake_policy(PUSH)
+cmake_policy(VERSION 3.0.0...3.27)
+
 # package initialization
 #
 @PACKAGE_INIT@
-
-cmake_policy(PUSH)
-cmake_policy(VERSION 3.0.0...3.27)
 
 # -------------------------------------------------------------------------------------- #
 # basic paths
